@@ -428,13 +428,11 @@ typedef struct InputFile {
 
     AVPacket *pkt;
 
-#if HAVE_THREADS
     AVThreadMessageQueue *in_thread_queue;
     pthread_t thread;           /* thread reading from this file */
     int non_blocking;           /* reading packets from the thread should not block */
     int joined;                 /* the thread has been joined */
     int thread_queue_size;      /* maximum number of queued packets */
-#endif
 } InputFile;
 
 enum forced_keyframes_const {
